website/versioned_docs/0.29/linking-libraries-ios.md
---
id: version-0.29-linking-libraries-ios
title: linking-libraries-ios
original_id: linking-libraries-ios
---
<a id="content"></a><table width="100%"><tbody><tr><td><h1><a class="anchor" name="linking-libraries"></a>Linking Libraries <a class="hash-link" href="docs/linking-libraries-ios.html#linking-libraries">#</a></h1></td><td style="text-align:right;"><a target="_blank" href="https://github.com/facebook/react-native/blob/0.29-stable/docs/LinkingLibraries.md">Edit on GitHub</a></td></tr></tbody></table><div><p>Not every app uses all the native capabilities, and including the code to support
all those features would impact the binary size... But we still want to make it
easy to add these features whenever you need them.</p><p>With that in mind we exposed many of these features as independent static libraries.</p><p>For most of the libs it will be as simple as dragging two files, sometimes a third
step will be necessary, but no more than that.</p><p><em>All the libraries we ship with React Native live on the <code>Libraries</code> folder in
the root of the repository. Some of them are pure JavaScript, and you only need
to <code>require</code> it. Other libraries also rely on some native code, in that case
you'll have to add these files to your app, otherwise the app will throw an
error as soon as you try to use the library.</em></p><h2><a class="anchor" name="here-the-few-steps-to-link-your-libraries-that-contain-native-code"></a>Here the few steps to link your libraries that contain native code <a class="hash-link" href="docs/linking-libraries-ios.html#here-the-few-steps-to-link-your-libraries-that-contain-native-code">#</a></h2><h3><a class="anchor" name="automatic-linking"></a>Automatic linking <a class="hash-link" href="docs/linking-libraries-ios.html#automatic-linking">#</a></h3><p>"<a href="http://github.com/rnpm/rnpm" target="_blank">rnpm</a>" is a community project that allows linking of native dependencies automatically:</p><h4><a class="anchor" name="step-1"></a>Step 1 <a class="hash-link" href="docs/linking-libraries-ios.html#step-1">#</a></h4><p>Install <code>rnpm</code>:</p><div class="prism language-javascript">$ npm install rnpm <span class="token operator">-</span>g</div><p><strong>Note:</strong> <em><code>rnpm</code> requires <code>node</code> version 4.1 or higher</em></p><h4><a class="anchor" name="step-2"></a>Step 2 <a class="hash-link" href="docs/linking-libraries-ios.html#step-2">#</a></h4><p>Install a library with native dependencies:</p><div class="prism language-javascript">$ npm install &lt;library<span class="token operator">-</span><span class="token keyword">with</span><span class="token operator">-</span>native<span class="token operator">-</span>dependencies<span class="token operator">&gt;</span> <span class="token operator">--</span>save</div><p><strong>Note:</strong> <em><code>--save</code> or <code>--save-dev</code> flag is very important for this step. <code>rnpm</code> will link
your libs based on <code>dependencies</code> and <code>devDependencies</code> in your <code>package.json</code> file.</em></p><h4><a class="anchor" name="step-3"></a>Step 3 <a class="hash-link" href="docs/linking-libraries-ios.html#step-3">#</a></h4><p>Link your native dependencies:</p><div class="prism language-javascript">$ rnpm link</div><p>Done! All libraries with a native dependencies should be successfully linked to your iOS/Android project.</p><h3><a class="anchor" name="manual-linking"></a>Manual linking <a class="hash-link" href="docs/linking-libraries-ios.html#manual-linking">#</a></h3><h4><a class="anchor" name="step-1"></a>Step 1 <a class="hash-link" href="docs/linking-libraries-ios.html#step-1">#</a></h4><p>If the library has native code, there must be a <code>.xcodeproj</code> file inside it's
folder.
Drag this file to your project on Xcode (usually under the <code>Libraries</code> group
on Xcode);</p><p><img src="img/AddToLibraries.png" alt=""></p><h4><a class="anchor" name="step-2"></a>Step 2 <a class="hash-link" href="docs/linking-libraries-ios.html#step-2">#</a></h4><p>Click on your main project file (the one that represents the <code>.xcodeproj</code>)
select <code>Build Phases</code> and drag the static library from the <code>Products</code> folder
inside the Library you are importing to <code>Link Binary With Libraries</code></p><p><img src="img/AddToBuildPhases.png" alt=""></p><h4><a class="anchor" name="step-3"></a>Step 3 <a class="hash-link" href="docs/linking-libraries-ios.html#step-3">#</a></h4><p>Not every library will need this step, what you need to consider is:</p><p><em>Do I need to know the contents of the library at compile time?</em></p><p>What that means is, are you using this library on the native side or only in
JavaScript? If you are only using it in JavaScript, you are good to go!</p><p>This step is not necessary for libraries that we ship with React Native with the
exception of <code>PushNotificationIOS</code> and <code>Linking</code>.</p><p>In the case of the <code>PushNotificationIOS</code> for example, you have to call a method
on the library from your <code>AppDelegate</code> every time a new push notification is
received.</p><p>For that we need to know the library's headers. To achieve that you have to go
to your project's file, select <code>Build Settings</code> and search for <code>Header Search
Paths</code>. There you should include the path to your library (if it has relevant
files on subdirectories remember to make it <code>recursive</code>, like <code>React</code> on the
example).</p><p><img src="img/AddToSearchPaths.png" alt=""></p></div><div class="docs-prevnext"><a class="docs-next" href="docs/running-on-device-ios.html#content">Next →</a></div><div class="survey"><div class="survey-image"></div><p>Recently, we have been working hard to make the documentation better based on your feedback. Your responses to this yes/no style survey will help us gauge whether we moved in the right direction with the improvements. Thank you!</p><center><a class="button" href="https://www.facebook.com/survey?oid=516954245168428">Take Survey</a></center></div>